[fix] top bar brand image invisible on FF

--- a/_sass/components/top-bar.scss
+++ b/_sass/components/top-bar.scss
@@ -127,6 +127,10 @@
     }
   }
 
+  .c-top-bar__brand-link {
+    width: 100%;
+  }
+
   .c-top-bar__brand-image {
     width: 100%;
   }
